# leptos-resize

./: Cargo.toml  LICENSE  README.md  leptosfmt.toml
examples/simple-split/: Cargo.toml  Trunk.toml  index.html
examples/simple-split/public/: styles.scss
examples/simple-split/src/: lib.rs  main.rs
src/: lib.rs
