[package]
name = "leptos-resize"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", default-features = false }
web-sys = { version = "0.3", default-features = false, features = [
  "Document",
  "Window",
  "Event",
  "EventTarget",
  "DomRect",
  "Element",
] }

[features]
default = []
ssr = []
