[package]
name = "leptos-resize"
version = "0.1.0"
edition = "2021"
description = "Simple user-resizable split view for Leptos"
license = "MIT"
repository = "https://github.com/zortax/leptos-resize"
authors = ["Leonard Seibold <git@zrtx.de>"]
exclude = ["preview.gif"]

[dependencies]
leptos = { version = "0.7", default-features = false }
web-sys = { version = "0.3", default-features = false, features = [
  "Document",
  "Window",
  "Event",
  "EventTarget",
  "DomRect",
  "Element",
] }
